# astrotrader

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  pyproject.toml  render.yaml  summary.md  vercel.json
astrotrader/: __init__.py  cli.py  config.py  pipeline.py
astrotrader/api/: main.py
astrotrader/backtest/: ablation.py  metrics.py  report.py  walk_forward.py
astrotrader/calibration/: __init__.py  calibrator.py
astrotrader/confluence/: score.py
astrotrader/data/: ephemeris.py  prices.py
astrotrader/decay/: weights.py
astrotrader/outcomes/: distribution.py  forward.py
astrotrader/similarity/: engine.py
astrotrader/state/: astro.py  composer.py  market.py  regime.py
data_cache/: calibrator_BANKNIFTY_h5_platt.joblib  calibrator_BTCUSD_h5_platt.joblib  calibrator_ETHUSD_h5_platt.joblib  calibrator_GLD_h5_platt.joblib  calibrator_HDFCBANK_h5_platt.joblib  calibrator_IWM_h5_platt.joblib  calibrator_NIFTY_h5_platt.joblib  calibrator_QQQ_h5_platt.joblib  calibrator_RELIANCE_h5_platt.joblib  calibrator_SPY_h5_isotonic.joblib  calibrator_SPY_h5_platt.joblib  calibrator_TCS_h5_platt.joblib  calibrator_USO_h5_platt.joblib  calibrator_XAUUSD_h5_platt.joblib
scripts/: decide_now.py
tests/: conftest.py  test_ablation.py  test_backtest.py  test_calibration.py  test_smoke.py
web/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: ClockPanel.tsx  Controls.tsx  DashboardSkeleton.tsx  DecisionPanel.tsx  MirrorPanel.tsx  ProbabilityField.tsx  TruthPanel.tsx  (+1 more)
(+2 files in other folders)
