[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astrotrader"
version = "0.1.0"
description = "ASTROTRADE: Time Intelligence Engine for markets."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "skyfield>=1.49",
    "yfinance>=0.2.40",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "python-dateutil>=2.8",
    "joblib>=1.3",
    "click>=8.1",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.8"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
astrotrader = "astrotrader.cli:main"

[tool.setuptools.packages.find]
include = ["astrotrader*"]

[tool.ruff]
line-length = 100
target-version = "py311"
